🐛 FIX: Spacing and Nesting of Collapse

--- a/blocks/collapse/src/editor.scss
+++ b/blocks/collapse/src/editor.scss
@@ -11,6 +11,7 @@
             padding: 0;
 			max-width: 100%;
 			margin: 0;
+			margin-bottom: 0 !important;
         }
         .card-body > *:last-child {
 			margin-bottom: 0;
